Thu Sep  9 00:22:51 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/DAnCE_Core.mpc:

          Added Version.h to stub project.

        * DAnCE/install_versionh.mpc:

          Removed this file.

Wed Sep  8 15:29:55 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/dance_tests.lst:
        * tests/CIAO:

          Moved all CIAO specific tests to CIAO.

Wed Sep  8 15:07:04 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/dance_tests.lst:

          Added IDL3_to_XMI tests.

Wed Sep  8 15:05:25 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * NEWS:

          Added a news file.

Wed Sep  8 15:04:34 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * MPC/config/dance.mpb:
        * MPC/config/dance_deployment_skel.mpb:
        * MPC/config/dance_deployment_stub.mpb:

          Removed references to CIAO_ROOT.

        * Logger/Logger_Service.h:

          Fallout from above change.

Wed Sep  8 15:03:22 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tests/IDL3_to_XMI:
        * tools/IDL3_to_XMI:
        * tools/IDL3_to_XMI/IDL3_TO_XMI.mpc:
        * tools/IDL3_to_XMI/IDL3_to_XMI_visitor.h:
        * tools/IDL3_to_XMI/IDL3_to_XMI_visitor.cpp:
        * tools/IDL3_to_XMI/IR_Simulator_visitor.h:
        * tools/IDL3_to_XMI/IR_Simulator_visitor.cpp:
        * tools/IDL3_to_XMI/Literals.h:
        * tools/IDL3_to_XMI/Literals.cpp:
        * tools/IDL3_to_XMI/be_produce.cpp:
        * tests/IDL3_to_XMI/IDL2XMI_Test/IDL2XMI_Test.mpc:
        * tests/IDL3_to_XMI/IDL2XMI_Test/XML_Helper.h:
        * tests/IDL3_to_XMI/IDL2XMI_Test/XML_Helper.cpp:
        * tests/IDL3_to_XMI/IDL2XMI_Test/xmlvalidator.cpp:

          Moved IDL3_to_XMI to DAnCE.

Wed Sep  8 14:59:18 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * Config_Handlers/*:

          Moved config handlers into the DAnCE namespace.

        * tools/XML:
        * tools/XML/XML.mpc: