@@ -1,3 +1,9 @@
+Thu Sep  9 11:15:16 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * RepositoryManager/RepositoryManager_Impl.cpp:
+
+          Compile fix.
+
 Thu Sep  9 00:22:51 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * DAnCE/DAnCE_Core.mpc:
